# TGU_Robocore_2027

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/auto_aim/: CMakeLists.txt  armor.cpp  armor.hpp  classifier.cpp  classifier.hpp  detection.hpp  detector.cpp  detector.hpp  perceptron.cpp  perceptron.hpp  solver.cpp  solver.hpp  yolo.cpp  yolo.hpp
app/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
app/decision/: CMakeLists.txt  decider.cpp  decider.hpp  shooter.cpp  shooter.hpp  voter.cpp  voter.hpp
app/decision/multithread/: commandgener.cpp  commandgener.hpp  mt_detector.cpp  mt_detector.hpp
app/predictor/: CMakeLists.txt  aimer.cpp  aimer.hpp
app/predictor/planner/: planner.cpp  planner.hpp
app/predictor/planner/tinympc/: CMakeLists.txt
app/tracker/: CMakeLists.txt  target.cpp  target.hpp  tracker.cpp  tracker.hpp
config/: calibration.toml  camera.toml  game.toml  serial.toml  vision.toml
io/: CMakeLists.txt  camera.cpp  camera.hpp
io/cboard/: cboard.cpp  cboard.hpp  command.hpp  socketcan.hpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/imu/: imu.cpp  imu.hpp
io/mindvision/: mindvision.cpp  mindvision.hpp
io/serial/: serial.cpp  serial.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
task/: CMakeLists.txt  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp
task/test/: read_toml.cpp  test_camera.cpp
tools/: CMakeLists.txt  crc.cpp  crc.hpp  exiter.cpp  exiter.hpp  extended_kalman_filter.cpp  extended_kalman_filter.hpp  foxglove_comm.cpp  foxglove_comm.hpp  img_tools.cpp  img_tools.hpp  logger.cpp  logger.hpp  math_tools.cpp  math_tools.hpp  pid.cpp  pid.hpp  plotter.cpp  plotter.hpp  ransac_sine_fitter.cpp  ransac_sine_fitter.hpp  recorder.cpp  recorder.hpp  thread_pool.hpp  thread_safe_queue.hpp  toml.hpp  trajectory.cpp  trajectory.hpp
